kubernetes/swarm-ui/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: swarm-ui
spec:
  type: ClusterIP
  selector:
    app: swarm-ui
  ports:
    - name: http
      port: 7801
    - name: comfy-ui
      port: 8000
